<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E-Tour HaLong</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="fail_load_title_doujin">Failed to load doujinshi\'s title</string>
    <string name="fail_load_serie_doujin">Failed to load series</string>
    <string name="fail_load_description_doujin">Failed to load description</string>
    <string name="fail_load_artist_doujin">Failed to load artist</string>
    <string name="fail_load_language_doujin">Failed to load language</string>
    <string name="fail_load_translator_doujin">Failed to load translator</string>
    <string name="fail_load_uploader_doujin">Failed to load uploader</string>
    <string name="fail_load_page_doujin">Failed to load quantity of pages and favorites</string>
    <string name="fail_load_tags_doujin">Failed to load tags</string>

    <string name="label_serie"><![CDATA[<b>Series:</b> <a href=\"#\">?</a>]]>	</string>
    <string name="label_artist"><![CDATA[<b>Artist:</b> <a href=\"#\">?</a>]]>	</string>
    <string name="label_description"><![CDATA[<b>Description:</b> ?]]>	</string>
    <string name="label_language"><![CDATA[<b>Language:</b> <a href=\"#\">?</a>]]>	</string>
    <string name="label_translator"><![CDATA[<b>Translator:</b> <a href=\"#\">?</a>]]>	</string>

    <string name="label_serie_row">Series:</string>
    <string name="label_artist_row">Artist:</string>
    <string name="label_description_row">Description:</string>
    

    <string name="content_uploader">uploaded by rpc1, rpc2</string>
    <string name="content_pages">rpc1 pages</string>
	
    <string name="label_add">Address:</string>
    <string name="label_tags">Tags:</string>
    <string name="button_refresh">Refresh</string>
    <string name="title_activity_doujin">DoujinActivity</string>
    <string name="add_favorite">Add to Favorites</string>
    <string name="download">Download</string>
    <string name="menu_downloads">Downloads</string>
    <string name="delete">Delete</string>
    <string name="mangas">Manga</string>
    <string name="doujinshis">Doujinshi</string>
    <string name="random">Random</string>
    <string name="loading">Loading&#8230;</string>
    <string name="quickRead">Opening to read&#8230;</string>
    <string name="search">Search</string>
    <string name="tile_tag">Tag rpc1</string>
    <string name="tile_serie">Series rpc1</string>
    <string name="tile_artist">Artist rpc1</string>
    <string name="tile_language">Language rpc1</string>
    <string name="tile_translator">Translator rpc1</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="read">Read</string>
    <string name="remove_favorite">Remove from favorites</string>
    <string name="my_favorites">My favorites</string>
    <string name="login">Login</string>
    <string name="scan">Scan folder</string>
    <string name="logout">Logout</string>
    <string name="login_please">You are not logged. Do you want to log in?</string>
    <string name="view_browser">View in Browser</string>
    <string name="favorite">Favorites of usr</string>
    <string name="reading_left_right">Reading: Left to Right</string>
    <string name="reading_right_left">Reading: Right to Left</string>
    <string name="refresh">Refresh</string>
    <string name="next_page">Next Page</string>
    <string name="previous_page">Previous Page</string>
    <string name="page_1">Page 1</string>
    <string name="browse">Browse</string>
    <string name="logged">You are logged in.</string>
    <string name="added_favorite">Added to Favorites</string>
    <string name="removed_favorite">Removed from Favorites</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">About FakkuDroid</string>
    <string name="loggedout">You are logged out.</string>
    <string name="comments">Comments</string>
    <string name="related_content">Related Content</string>
    <string name="in_construction">In Construction</string>
    <string name="go_to">Go to&#8230;</string>
    <string name="go_to_first">Go to First Page</string>
    <string name="go_to_last">Go to Last Page</string>
    <string name="error_page_out">Error: Number Page</string>
    <string name="reply">Reply</string>
    <string name="details">Details</string>
    <string name="like">Like +1</string>
    <string name="dislike">Dislike -1</string>
    <string name="come_back">Come back</string>
    <string name="soon">Soon</string>
    <string name="no_data">No data</string>
    <string name="load_more">Load more&#8230;</string>
    <string name="deleted">Deleted</string>
    <string name="password_incorrect">Password incorrect</string>
    <string name="unlock">Unlock</string>
    <string name="ask_delete">Are you sure you want to delete?</string>
    <string name="title_activity_download_list">Downloads</string>
    <string name="close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="error_open_perfect_viewer">Error opening Perfect Viewer</string>
	
    <string name="tuan_chau">
    Tuần Châu is covered by pine forest, has an area of 2.2
     km² and to the east and south are two man made beaches
     endowed with very white, fine sand.
	</string>
	
	<string name="thien_cung">
	Thien Cung Cave is 10,000 square 
	 meters with complicated interior structure, many floors,
	  and high ceiling. 
	</string>
	
	<string name="yen_tu">
    Yen Tu is famous all over the world for its beautiful
     landscapes, historical relics and hundreds of ancient
      pagodas and towers
    </string>
    
    <string name="ha_long_bay">
    Hạ Long Bay is a UNESCO World Heritage Site, and a popular
     travel destination, in Vietnam. 
    </string>
    <string name="quan_lan">
    One of the outlying islands of the Ha Long Bay region and 
    technically in BaiTuLong bay, has been sparsely
     inhabited for quite some time.     
    </string>
    
</resources>