<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern" >

    <RelativeLayout
        android:id="@+id/view_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:max="100" />

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp" >

            <view
                android:id="@+id/btnAddToFavorite"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                class="com.example.demo.hl.component.ActionImageButton"
                android:background="@android:color/transparent"
                android:contentDescription="@string/add_favorite"
                android:scaleType="center"
                android:src="@drawable/rating_not_important" />

            <view
                android:id="@+id/btnRefresh"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                class="com.example.demo.hl.component.ActionImageButton"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_refresh"
                android:scaleType="center"
                android:src="@drawable/navigation_refresh" />

            <view
                android:id="@+id/btnViewInBrowser"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                class="com.example.demo.hl.component.ActionImageButton"
                android:background="@android:color/transparent"
                android:contentDescription="@string/view_browser"
                android:scaleType="center"
                android:src="@drawable/location_web_site" />

            <view
                android:id="@+id/btnComments"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                class="com.example.demo.hl.component.ActionImageButton"
                android:background="@android:color/transparent"
                android:contentDescription="@string/comments"
                android:scaleType="center"
                android:src="@drawable/social_chat" />

            <view
                android:id="@+id/btnRelatedContent"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                class="com.example.demo.hl.component.ActionImageButton"
                android:background="@android:color/transparent"
                android:contentDescription="@string/related_content"
                android:scaleType="center"
                android:src="@drawable/collections_labels" />

            <view
                android:id="@+id/btnDownload"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                class="com.example.demo.hl.component.ActionImageButton"
                android:background="@android:color/transparent"
                android:contentDescription="@string/download"
                android:scaleType="center"
                android:src="@drawable/av_download" />

            <view
                android:id="@+id/btnReadOnline"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                class="com.example.demo.hl.component.ActionImageButton"
                android:background="@android:color/transparent"
                android:contentDescription="@string/read"
                android:scaleType="center"
                android:src="@drawable/av_play" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll2"
            android:layout_below="@+id/progressBar"
            android:fillViewport="true" >

            <RelativeLayout
                android:id="@+id/doujinDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/tvDoujin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FF6600"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tvDoujin"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp" >

                    <ImageView
                        android:id="@+id/ivTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:background="#FF6600"
                        android:padding="2dp"
                        android:scaleType="fitXY"
                        android:scrollbars="none"
                        android:src="@drawable/loading" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_description_row"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/view_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/pattern">

        <TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_centerVertical="true"
			    android:background="#80000000"
			    android:gravity="center_horizontal"
			    android:text="Loading..."
			    android:textColor="#fff"
			    android:textSize="18sp"
			    android:textStyle="italic" />

    </LinearLayout>

</RelativeLayout>